# excel2erp

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
assets/: wb-server.yaml  wb.css
demo/: algebra-vs-aritmetica.html  pedidos-rey-pepinito.py  run.bat  run.sh
excel2erp-kotlin/: README.md  build.gradle.kts  upgrade-plan.md  upgrade-results.md
excel2erp-kotlin/demo/: assets  data  excel2erp.yaml
excel2erp-kotlin/docs/: 01-genesis.md  02-epiphany.md  03-contrast.md  04-analysis.md  05-model.md  06-jackson.md  07-htmx.md  08-excel.md  09-functional.md  10-conclusion.md  Gemfile  _config.yml  index-monolith.md  index.md
excel2erp-kotlin/docs/_layouts/: default.html
excel2erp-kotlin/docs/code/: model-kt.md  server-kt.md  workbook-kt.md
excel2erp-python/: README.md  excel2erp.py  init.sh  pyproject.toml  requirements.txt
excel2erp-python/src/: config.py  engine.py  excel.py  excel2erp.py  model.py
excel2erp-python/tests/: conftest.py  test_config.py  test_engine.py  test_excel.py  test_model.py
excel2erp-typescript/: .gitignore  CLAUDE.md  README.md  editor.html  eslint.config.js  index.html  package.json  playwright.config.ts  vite.config.editor.ts  vitest.config.ts
excel2erp-typescript/scripts/: build-to.ts  embed-config.ts
excel2erp-typescript/src/: main.ts
excel2erp-typescript/src/config/: embedded.ts  loader.ts  logos.ts
excel2erp-typescript/src/editor/: detail-region.ts  i18n.ts  main.ts  sheet-utils.ts  value-source.ts
shared/: README.md  excel2erp.yaml
shared/spec/: config-schema.en.md
src/main/kotlin/: Model.kt  Server.kt  (+3 more)
(+44 files in other folders)
